# Whatslectron-UT

./: README.md  build.sh  clickable.yaml  launcher.sh  manifest.json  push-apparmor.json  whatslectron-push.apparmor  whatslectron.desktop
patches/Signal-Desktop/: bump_electronbuilder_version.patch  fs-extra+11.2.0.patch  inject_js_responsive.patch  responsive.js
patches/libnotify/: notification.c.diff
patches/maliit-inputcontext-gtk/: client-imcontext-gtk.c.patch
utils/: filedialog-deamon.sh  get-scale.sh  mkdir.sh  rm.sh  sleep.sh
utils/download-helper/qml/: ExportPage.qml
utils/download-helper/qml-download-helper-module/: DownloadHelper.cpp
utils/mic-permission-requester/: Main.qml
utils/mic-permission-requester/AudioModule/: CMakeLists.txt  audiowriter.cpp  audiowriter.h  plugin.cpp  qmldir
utils/placeholder-killer/: CMakeLists.txt  placeholder-killer.cpp
utils/upload-helper/qml/: ImportPage.qml
utils/upload-helper/qml-upload-helper-module/: CMakeLists.txt  UploadHelper.cpp  UploadHelper.h  plugin.cpp  qmldir
utils/xdg-open/: CMakeLists.txt  xdg-open.c  xdg-open.cpp
whatslectron-src/: main.js  package-lock.json  package.json  ubuntutheme.js
whatslectron-src/scripts/: esbuild.js
